2010-06-08  Karel Klíč  <kklic@redhat.com>

	* NEWS: Added changes from version 0.6

2010-06-07  Karel Klíč  <kklic@redhat.com>

	* gui_timebarpair.py (TimeBarPair.__init__): Fix constructor
	call again.

	* main.py: renamed to flashfit.py

	* Makefile.am, configure.ac, autogen.sh, utils/Makefile.am:
	* docs/Makefile.am: New autotools infrastructure.

	* flashfit.nsis: Use version provided by autotools from
	command line.
	Use flashfit.py instead of main.py.

2010-06-07  Karel Klíč  <kklic@redhat.com>

	* gui_timebarpair.py (TimeBarPair.__init__): Do not use named parameters.
	This flaw blocked Windows Python from running FlashFit.

	* NEWS: Add changes from version 0.5.

2010-06-05  Karel Klíč  <kklic@redhat.com>

	* gui_residualsgraph.py (ResidualsGraph.resizeFromData): Update to keep up with other code changes.
	Makes Time Axis Length setting to work again.
	* gui_absorbancegraph.py (AbsorbanceGraph.resizeFromData): Likewise.
	* gui_absorbancefit.py (AbsorbanceFit.resizeFromData): Likewise.

	* method_experimental.py (ModelAtoBtoC.__init__, ModelAtoB.__init__, ModelAtoBCtoD.__init__):
	New array self.parameters contains parameters settings.
	(ModelAtoBtoC.assureInitialParameters, ModelAtoB.assureInitialParameters): initialParameters
	renamed to assureInitialParameters. Set initial values only if they are not set by
	user (so only if == 0).
	(ModelAtoBCtoD.assureInitialParameters): Likewise.
	(ModelAtoBtoC.rcalc, ModelAtoB.rcalc, ModelAtoBCtoD.rcalc): Use self.parameters instead
	of a parameter.

	* gui_settings_experimental.py: Implement GUI for fixable parameters.
	Allow to setup start values for parameters.

2010-06-03  Karel Klic  <kklic@redhat.com>

	* gui_mainwindow.py: Use prefix PyQt4 every time instead of
	"from PyQt4 import QtCore, QtGui".
	Fixed call of Appearance dialog.

	* NEWS: Added news for FlashFit 0.4.

	* README: Update version to 0.4.
	* flashfit.nsis: Likewise.

2010-06-02  Karel Klíč  <kklic@redhat.com>
